add(lab06): Adding lab06 deliverables

--- a/labs/lab06_gdb/Makefile
+++ b/labs/lab06_gdb/Makefile
@@ -1,13 +1,14 @@
 all: date
+CXXFLAGS = -Wall -g
 
 date:	main.cc Date.o Exceptions.o
-	g++ -Wall -o date main.cc Date.o Exceptions.o
+	g++ $(CXXFLAGS) -o date main.cc Date.o Exceptions.o
 
 Date.o:	Date.cc Date.h Debug.h
-	g++ -Wall -c -o Date.o Date.cc
+	g++ $(CXXFLAGS) -c Date.cc
 
 Exceptions.o:	Exceptions.cc Exceptions.h
-	g++ -Wall -c -o Exceptions.o Exceptions.cc
+	g++ $(CXXFLAGS) -c Exceptions.cc
 
 clean:
 	rm -f *date *.o
